unpackaged/main/default/objects/Client_Insight_History__c/Client_Insight_History__c.object-meta.xml
<CustomObject>
    <label>Client Insight History</label>
    <nameField>
        <displayFormat>CIH-{0000000}</displayFormat>
        <label>Client Insight History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Insight Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>