unpackaged/main/default/objects/Client_Insight_History__c/fields/ClientInsight__c.field-meta.xml
<CustomField>
    <fullName>ClientInsight__c</fullName>
    <label>Client Insight</label>
    <referenceTo>Client_Insight__c</referenceTo>
    <relationshipLabel>Client Insight Histories</relationshipLabel>
    <relationshipName>ClientInsightHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>