unpackaged/main/default/objects/Client_Insight_History__c/fields/ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Insight_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>