unpackaged/main/default/objects/Client_Insight_History__c/fields/ModifiedField__c.field-meta.xml
<CustomField>
    <fullName>ModifiedField__c</fullName>
    <label>Modified Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>